<resources>
    <string name="app_name">Connector</string>

    <string name="error_login">Please insert a correct email address</string>
    <string name="error_password">Password has to contain at least 6 characters</string>
    <string name="error_sign_in">Check your internet connection.</string>
    <string name="error_sign_in_invalid_data">Your email or password is invalid. Please try again.</string>
    <string name="button_login">sign in</string>
    <string name="button_retry">retry</string>
    <string name="hint_login">Email</string>
    <string name="hint_password">Password</string>

    <string name="log_in_label">Sign in</string>
    <string name="main_label">Inbox</string>

    <string name="ct_avatar_icon">avatar_icon</string>
    <string name="ct_empty_inbox">empty_inbox</string>
    <string name="ct_empty_search">empty_search</string>
    <string name="ct_icon_close">icon_close</string>
    <string name="ct_icon_back">icon_back</string>
    <string name="ct_icon_logo">icon_logo</string>
    <string name="ct_icon_microphone">icon_microphone</string>
    <string name="ct_icon_send">icon_send</string>
    <string name="ct_icon_check_all">icon_check</string>

    <string name="empty_inbox_text">Your inbox is empty.\nWait for messages sent by HR department.</string>
    <string name="empty_chat_text">There are no messages already.\nStart conversation!</string>

    <string name="sign_out_label">Sign out</string>
    <string name="change_password_label">Change password</string>
    <string name="profile_label">My Profile</string>

    <string name="sign_out_message">Are you sure you want to sign out?</string>
    <string name="sign_out_yes">Yes</string>
    <string name="sign_out_cancel">Cancel</string>
    <string name="fab_chat_one">Chat someone</string>
    <string name="fab_chat_all">Write to all</string>

    <string name="reset_password_old_invalid">Your current password is not valid. Please insert the correct one.</string>
    <string name="reset_password_new_invalid">New password has to contain at least 6 characters.</string>
    <string name="reset_password_confirm_invalid">Invalid confirmation the new password</string>
    <string name="reset_password_old_invalid_empty">Old password cannot be empty.</string>
    <string name="reset_password_success_title">Information</string>
    <string name="reset_password_success_message">Password has changed successfully.</string>
    <string name="reset_password_success_button">OK</string>

    <string name="hint_old_password">Old password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_confirm_password">Confirm password</string>

    <string name="message_to_all_hint">Insert your message</string>
    <string name="message_to_all_success">Message sent successfully.</string>
    <string name="message_to_all_error">Something went wrong. Please try again.</string>

    <string name="user_search_empty">No users found.\nPlease try using other words.</string>
    <string name="chat_hint_input_text">Input a message…</string>
</resources>
