<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.google.common.base.Strings"/>

        <variable
            name="model"
            type="com.rstit.connector.ui.login.CustomLoginViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="false">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_login"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={model.mLogin}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            app:errorEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={model.mPassword}"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{model.error}"
            android:textColor="@android:color/holo_red_dark"
            app:visibleIf="@{!Strings.isNullOrEmpty(model.error)}"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/padding_default"
            android:onClick="@{() -> model.validate()}"
            android:text="@string/button_login"
            android:theme="@style/AccentColorButton"/>
    </LinearLayout>
</layout>