<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.google.common.base.Strings"/>

        <variable
            name="viewAccess"
            type="com.rstit.connector.ui.search.UserSearchViewAccess"/>

        <variable
            name="model"
            type="com.rstit.connector.ui.search.UserSearchViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/mainCoordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginEnd="@dimen/padding_large"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/ct_icon_back"
                    android:onClick="@{() -> viewAccess.finishActivity()}"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_arrow_left_white_24dp"/>

                <EditText
                    android:id="@+id/edtSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="start|center_vertical"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:lines="1"
                    android:text="@={model.searchText}"
                    android:textColor="@android:color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/font_large"
                    tools:ignore="LabelFor"/>

                <FrameLayout
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginStart="@dimen/padding_large">

                    <ImageView
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/ct_icon_close"
                        android:onClick="@{() -> model.clearText()}"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_close_white_24dp"
                        android:visibility="gone"
                        app:visibleIf="@{!Strings.isNullOrEmpty(model.searchText)}"/>

                    <ImageView
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/ct_icon_microphone"
                        android:onClick="@{() -> viewAccess.startSpeaking()}"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_microphone_white_24dp"
                        android:visibility="gone"
                        app:visibleIf="@{Strings.isNullOrEmpty(model.searchText) &amp;&amp; model.isMicAvailable}"/>
                </FrameLayout>
            </LinearLayout>
        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_xlarge"
                app:visibleIf="@{model.isEmpty}"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_default"
                    android:contentDescription="@string/ct_empty_search"
                    android:src="@drawable/ic_account_search_black_48dp"
                    android:tint="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="@dimen/padding_default"
                    android:paddingStart="@dimen/padding_default"
                    android:text="@string/user_search_empty"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingBottom="@dimen/padding_default"
                android:paddingTop="@dimen/padding_default"
                app:adapter="@{viewAccess.adapter}"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
        </FrameLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>